--- a/QLBQA/Views/Cart/Cart.cshtml
+++ b/QLBQA/Views/Cart/Cart.cshtml
@@ -44,7 +44,7 @@
                                 </div>
                             </td>
                             <td class="align-middle">$150</td>
-                            <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
+                            <td class="align-middle"><a href="/Cart/RemoveFromCart/?productId=@line.Product.ProductId" class="btn btn-sm btn-primary"><i class="fa fa-times"></i></a></td>
                         </tr>
                     }
 
