--- a/QLBQA/Views/Cart/Cart.cshtml
+++ b/QLBQA/Views/Cart/Cart.cshtml
@@ -27,13 +27,13 @@
                     {
                         <tr>
                             <td class="align-middle"><img src="img/product-1.jpg" alt="" style="width: 50px;"> @line.Product.ProductName</td>
-                            <td class="align-middle">@line.Product.ProductPrice</td>
+                            <td class="align-middle">@(line.Product.ProductPrice - line.Product.ProductDiscount)</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-minus" >
+                                        <a href="/Cart/UpdateCart/?productId=@line.Product.ProductId" class="btn btn-sm btn-primary btn-minus">
                                             <i class="fa fa-minus"></i>
-                                        </button>
+                                        </a>
                                     </div>
                                     <input type="text" class="form-control form-control-sm bg-secondary text-center" value="@line.Quantity">
                                     <div class="input-group-btn">
@@ -43,7 +43,7 @@
                                     </div>
                                 </div>
                             </td>
-                            <td class="align-middle">$@(line.Product.ProductPrice * @line.Quantity)</td>
+                            <td class="align-middle">$@((line.Product.ProductPrice - line.Product.ProductDiscount) * @line.Quantity))</td>
                             <td class="align-middle"><a href="/Cart/RemoveFromCart/?productId=@line.Product.ProductId" class="btn btn-sm btn-primary"><i class="fa fa-times"></i></a></td>
                         </tr>
                     }
