--- a/QLBQA/Views/Shared/Components/Navbar/Default.cshtml
+++ b/QLBQA/Views/Shared/Components/Navbar/Default.cshtml
@@ -12,7 +12,7 @@
 
             @foreach (var item in Model)
             {
-                <a href="/Products/Index/?categoryId=@item.CategoryId" class="nav-item nav-link">@item.CategoryName</a>
+                <a href="/Products/ProductsByCat/?categoryId=@item.CategoryId" class="nav-item nav-link">@item.CategoryName</a>
             }
 
         </div>
