--- a/QLBQA/Views/Products/Index.cshtml
+++ b/QLBQA/Views/Products/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<QLBQA.Models.Product>
+﻿@using QLBQA.Models.ViewModels
+@model ProductListViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -118,6 +119,7 @@
                     </div>
                 </form>
             </div>
+            <button id="btnFilter" class="fa fa-search">Filter</button>
             <!-- Size End -->
         </div>
         <!-- Shop Sidebar End -->
@@ -150,7 +152,7 @@
                     </div>
                 </div>
 
-                @foreach(var item in Model)
+                @foreach(var item in Model.Products)
                 {
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="card product-item border-0 mb-4">
@@ -180,9 +182,12 @@
                                     <span class="sr-only">Previous</span>
                                 </a>
                             </li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            @for(int i=1;i<=Model.PagingInfo.TotalPages;i++)
+                            {
+                                <li class="page-item"><a class="page-link" href="/Products/?productPage=@i">@i</a></li>
+                            }
+                            
+                            
                             <li class="page-item">
                                 <a class="page-link" href="#" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
